1-system/2-qdrant/qdrant.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: qdrant-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - qdrant.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: qdrant.unique.svc.cluster.local
            port:
              number: 6333
